[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
blake3 = "=1.5.5"
solana-security-txt = "1.1.2"   # ← ADD THIS

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
