[package]
name = "project-x"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "project_x"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build"
]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
blake3 = { workspace = true }
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl  = { workspace = true }
solana-security-txt = { workspace = true }   # ← ADD THIS

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }


